Add link to playground and docs within header

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                 <div class="flex items-center">
                     <a href="#" class="text-xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-blue-400 to-indigo-500">ShellUI</a>
                 </div>
-                <div>
+                <div class="flex items-center gap-6">
+                    <a href="https://docs.shellui.com" class="text-sm font-medium text-gray-300 hover:text-white transition-colors">Docs</a>
+                    <a href="https://playground.shellui.com" class="text-sm font-medium text-gray-300 hover:text-white transition-colors">Playground</a>
                     <a href="https://github.com/shellui" class="text-gray-400 hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">
                         <span class="sr-only">GitHub</span>
                         <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
