--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@ shellui start</code></pre>
           <h2 class="text-4xl md:text-5xl font-bold text-primary dark:text-[#DBB778] mb-6 font-serif">
             Ready to Build?
           </h2>
-          <p class="text-lg text-muted-foreground mb-8 max-w-2xl mx-auto">
+          <p class="text-lg text-muted-foreground dark:text-[#E8EAED] mb-8 max-w-2xl mx-auto">
             Start building your microfrontend application today. ShellUI v0.1.0 is experimental but ready for your projects.
           </p>
           <div class="flex flex-col sm:flex-row gap-4 justify-center">
@@ -723,20 +723,20 @@ shellui start</code></pre>
             </p>
           </div>
           <div>
-            <h3 class="font-semibold text-foreground mb-4 font-serif">Resources</h3>
+            <h3 class="font-semibold text-foreground dark:text-[#E8EAED] mb-4 font-serif">Resources</h3>
             <ul class="space-y-2 text-sm">
               <li>
-                <a href="https://docs.shellui.com" class="text-muted-foreground dark:text-[#9C9696] hover:text-foreground dark:hover:text-[#E8EAED] transition-colors">
+                <a href="https://docs.shellui.com" class="text-muted-foreground dark:text-[#E8EAED] hover:text-foreground dark:hover:text-[#DBB778] transition-colors">
                   Documentation
                 </a>
               </li>
               <li>
-                <a href="https://playground.shellui.com" class="text-muted-foreground hover:text-foreground transition-colors">
+                <a href="https://playground.shellui.com" class="text-muted-foreground dark:text-[#E8EAED] hover:text-foreground dark:hover:text-[#DBB778] transition-colors">
                   Playground
                 </a>
               </li>
               <li>
-                <a href="https://github.com/shellui" class="text-muted-foreground hover:text-foreground transition-colors">
+                <a href="https://github.com/shellui" class="text-muted-foreground dark:text-[#E8EAED] hover:text-foreground dark:hover:text-[#DBB778] transition-colors">
                   GitHub
                 </a>
               </li>
